--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,10 +5,10 @@
     { "path": "./tsconfig.node.json" },
   ],
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "@pages/*": ["./pages/*"]
+      "@pages/*": ["src/pages/*"]
     }
   }
 }
